--- a/app/globals.css
+++ b/app/globals.css
@@ -1,21 +1,125 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Anton:ital,wght@0,100..900;1,100..900&display=swap');
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  color: #153d49;
+  line-height: 20px;
+
+}
+input::-webkit-input-placeholder { /* Chrome, Edge, Safari */
+  color: #153d49; 
+}
+
+input:-moz-placeholder { /* Firefox 19+ */
+  color: #153d49; 
+}
+
+input::-moz-placeholder { /* Firefox 4 - 18 */
+  color: #153d49; 
+}
+
+input:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: #153d49; 
+}
+
+.button-56 {
+  align-items: center;
+  font-weight: bold;
+  background-color: #fee6e3;
+  border: 2px solid #111;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #111;
+  cursor: pointer;
+  display: flex;
+  font-family: Inter,sans-serif;
+  font-size: 16px;
+  height: 48px;
+  justify-content: center;
+  line-height: 24px;
+  max-width: 100%;
+  padding: 0 25px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-56:after {
+  background-color: #111;
+  border-radius: 8px;
+  content: "";
+  display: block;
+  height: 48px;
+  left: 0;
+  width: 100%;
+  position: absolute;
+  top: -2px;
+  transform: translate(8px, 8px);
+  transition: transform .2s ease-out;
+  z-index: -1;
+}
+
+.button-56:hover:after {
+  transform: translate(0, 0);
+}
+
+.button-56:active {
+  background-color: #ffdeda;
+  outline: 0;
+}
+
+.button-56:hover {
+  outline: 0;
+}
+
+@media (min-width: 768px) {
+  .button-56 {
+    padding: 0 40px;
+  }
+}
+
+.bg_orange {
+  background-color: #fee3ba;
+}
+
+.bg_dark-orange {
+  background-color: #ffc167;
+}
+
+.text_orange {
+  color: #fe9903;
+  font-weight: 500;
+  font-family: "Anton";
+  letter-spacing: 2px;
+}
+
+.container {
+  box-shadow: 5px 10px 0px 5px black;
+  transition-duration: 0.2s;
+}
+
+.container:hover {
+  box-shadow: none;
+}
+
+.bg_darkorange {
+  background: linear-gradient(rgb(255, 170, 12), rgb(255, 138, 5));
+}
+
+.copy_btn {
+  box-shadow: 5px 5px 0px 1px black;
+  transition-duration: 0.2s;
+}
+
+.copy_btn:hover {
+  box-shadow: none;
 }
